[package]
name = "gerris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
chrono = "0.4.24"
clap = { version = "4.1.4", features = ["derive"] }
env_logger = "0.10.0"
git2 = "0.16.1"
log = "0.4.17"
nom = "7.1.3"
octocrab = "0.19.0"
thiserror = "1.0.40"
tokio = { version = "1.26.0", features = ["full"] }
